@@ -1,7 +1,8 @@
 Changes in Release 2.2.4
 =============================================
-[JOST-69] BasicSAMLArtifactMap dereferences a pointer that might be null
-[JOST-76] Relax requirement that HTTP requests be GETs when using Redirect and Artifact Binding
+[JOST-69] - BasicSAMLArtifactMap dereferences a pointer that might be null
+[JOST-76] - Relax requirement that HTTP requests be GETs when using Redirect and Artifact Binding
+[JOST-77] - Metadata refresh causes ConcurrentModificationException and idp failure
 
 Changes in Release 2.2.3
 =============================================
